# shinyrealtime

./: .gitignore  Makefile  README.md  app-minimal.R  app.R  app.py  build.js  events.R  events.py  package-lock.json  package.json  prompt-r.md  prompt.md  pyproject.toml  realtime.R  realtime.py  tsconfig.json
pkg-py/: .gitignore  CHANGELOG.md  README.md
pkg-py/src/shinyrealtime/: __init__.py  _events.py  _realtime.py
pkg-py/src/shinyrealtime/www/: app.js
pkg-r/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md
pkg-r/R/: events.R  realtime.R  shinyrealtime-package.R
pkg-r/man/: realtimeDependency.Rd  realtime_server.Rd  realtime_ui.Rd  shinyrealtime-package.Rd
src/: Connection.ts  MicButton.ts  index.ts  styles.css
www/: app.css  app.css.map  app.js  app.js.map
